app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  /* background-color: black; */
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}


@layer base {
  @font-face {
    font-family: 'S-Core_Dream';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(../public/fonts/S-Core_Dream_OTF/SCDream4.otf) format('opentype');
  }
  @font-face {
    font-family: 'Noto_Sans_KR';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: url(../public/fonts/Noto_Sans_KR/NotoSansKR-Regular.otf) format('opentype');
  }
}

